<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/threehundred"
        android:src="@drawable/ic_action_name"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePicture"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:textSize="@dimen/thirtysp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePicture"
        android:layout_toEndOf="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:gravity="bottom"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:textSize="@dimen/twentyfivesp" />

    <TextView
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/five" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/occupation"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="onBackClick"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/twenty"/>
</RelativeLayout>