...
    <string name="occupation">Occupation</string>
    <string name="profile">profile</string>
    <string name="matches">matches</string>
    <string name="settings">settings</string>
    <string name="matchesGoHere">Matches</string>
    <string name="settingsGoHere">Settings</string>
    <string name="drawer_open">"Open Navigation "</string>
    <string name="drawer_close">Close Navigation</string>
    <string name="mark_t">Mark T</string>
    <string name="really_cool_dude">Really cool dude</string>
    <string name="image_of_the_match">Image of the match</string>
    <string name="like">Like</string>
    <string name="liked_message">You liked: %s</string>
    <string name="pick_your_daily_matches_reminder_time">Pick your daily matches reminder time</string>
    <string name="set_your_maximum_distance_search_in_miles">Set your maximum distance search (in miles)</string>
    <string name="select_your_gender_preference">Select your gender preference</string>
    <string name="select_your_account_privacy_option">Select your account privacy option</string>
    <string name="set_your_interested_age_range">Set your interested age range</string>
    <string name="select_time">Select time</string>
    <string name="selected_time">Selected Time:</string>
...
